# firefly-iii-mcp

./: CLAUDE.md  main.py  plan.md  pyproject.toml  spec.md  todo.md
.claude/commands/: context-prime.md  do-todo.md  plan.md
docs/: fastmcp.txt
docs/agent_guidelines/: using-uv.md
firefly_iii_mcp/: __init__.py  __main__.py  cache.py  client.py  models.py  server.py  shortcuts.py  tools.py  utils.py
tests/: __init__.py  test_client.py  test_models.py  test_server.py
